--- a/estilo/style.css
+++ b/estilo/style.css
@@ -66,7 +66,7 @@ header > p {
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px black;
 }
 
